Terraform/infrastructure_modules/vpc/6-igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.project_name}-${var.internet_gateway}"
  }
}
